test/lit/tile_fusion/fusion_region_verify_yield_count_mismatch.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// Guards fusion_region verifier diagnostics when yield operand count does not
// match region result count.
//
// RUN: not ptoas --pto-level=level3 --emit-pto-ir %s 2>&1 | FileCheck %s

module {
  func.func @fusion_region_yield_count_mismatch_invalid() {
    %0 = pto.fusion_region {
      pto.yield() : () -> ()
    } : index
    return
  }
}

// CHECK: error: 'pto.fusion_region' op expects pto.yield to return 1 values, got 0
